--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.17.1"
+    "mongoose": "^5.5.5"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
