--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "jquery": "^3.4.0",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-animated-css": "^1.0.5",
     "react-dom": "^16.8.6",
