--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "dotenv": "^8.0.0",
     "jquery": "^3.4.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-animated-css": "^1.0.5",
