--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "server": "nodemon server.js",
-    "client": "npm start --prefix client",
+    "client": "cd client && npm run start",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
