--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "dotenv": "^8.0.0",
+    "image-compressor.js": "^1.1.4",
     "jquery": "^3.4.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
