--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-animated-css": "^1.0.5",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
