--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon server.js",
     "client": "cd client && npm run start",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild" : "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
@@ -21,8 +21,7 @@
     "express": "^4.16.4",
     "firebase": "^6.0.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.10",
-    "multer": "^1.4.1"
+    "mongoose": "^5.5.10"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
